--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_svg: ^2.2.3
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  provider: ^6.1.5+1
 
 dev_dependencies:
   flutter_test:
